--- a/api-test-automation/pom.xml
+++ b/api-test-automation/pom.xml
@@ -3,30 +3,39 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
+    <groupId>com.example</groupId>
     <artifactId>api-test-automation</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <cucumber.version>7.18.1</cucumber.version>
+        <restassured.version>5.2.0</restassured.version>
+        <junit.version>4.13.2</junit.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-java</artifactId>
-        <version>7.11.0</version>
+        <version>7.18.1</version>
+        <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
     <dependency>
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-junit</artifactId>
-        <version>7.11.0</version>
+        <version>7.18.1</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
     <dependency>
         <groupId>io.rest-assured</groupId>
         <artifactId>rest-assured</artifactId>
-        <version>5.4.0</version>
+        <version>5.2.0</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
@@ -44,11 +53,7 @@
     </dependency>
     </dependencies>
 
-<properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -56,9 +61,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+               <configuration>
+                   <includes>
+                       <include>**/*Test.java</include>
+                   </includes>
                 </configuration>
             </plugin>
 
@@ -68,7 +74,6 @@
             <version>3.0.0-M5</version>
         </plugin>
         </plugins>
-
     </build>
 
 </project>
