--- a/api-test-automation/pom.xml
+++ b/api-test-automation/pom.xml
@@ -74,7 +74,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
+
             <configuration>
+                <parallel>none</parallel>
                 <includes>
                     <include>**/*Test.java</include>
                 </includes>
